# buzzy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md  setup.py  version.py  version.sh
.buzzy/: package.yaml
buzzy/: commands.py  config.py  detect.py  errors.py  log.py  pkg.py  recipe.py  utils.py  yaml.py
buzzy/cmd/: __init__.py
buzzy/command/: build.py  configure.py  info.py  install.py  list.py  update.py
buzzy/common/: __init__.py
buzzy/common/cmd/: info.py
buzzy/distro/: __init__.py  arch.py
buzzy/distro/arch/: __init__.py  pkgbuild.py
buzzy/os/: arch.py  utils.py
buzzy/source/: __init__.py  download.py  git.py
docker/: all  build  build-all  build-inside  upload
docker/distros/arch/: Dockerfile  makepkg.conf  sudoers
docker/distros/centos-centos6/: Dockerfile
docker/distros/centos-centos7/: Dockerfile
docker/distros/debian-wheezy/: Dockerfile
docker/distros/ubuntu-precise-12.04/: Dockerfile  sudoers
docker/distros/ubuntu-trusty-14.04/: Dockerfile
docs/: CMakeLists.txt  conf.py
include/: CMakeLists.txt
include/buzzy/: action.h  builders.h  built.h  callbacks.h  commands.h  distro.h  env.h  error.h  logging.h  mock.h  native.h  os.h  package.h  recipe.h  repo.h  run.h  value.h  version.h  yaml.h
include/buzzy/builders/: cmake.h
include/buzzy/distro/: arch.h  debian.h  git.h  homebrew.h  posix.h  rpm.h
lib/: .gitattributes
recipes/python/: buzzy.yaml  yaml.yaml
scripts/: buzzy
share/: CMakeLists.txt
share/buzzy/: config.yaml
spec/: buzzy.rb
src/: CMakeLists.txt  buzzydock
src/buzzy/: build.c  buzzy.c  doc.c  foo.c  get.c  info.c  install.c  raw-build.c  raw-pkg.c  raw.c  root.c  test.c  uninstall.c  update.c  vercmp.c
src/clogger/: CMakeLists.txt
src/libbuzzy/: .gitattributes  action.c  builder.c  built.c  dependency.c  dependency.c.rl  env.c  global-vars.c  interpolated.c  interpolated.c.rl  logging.c  mock.c  native.c  os.c  package.c  packager.c  recipe.c  repo.c  run.c  value.c  version.c  version.c.rl  yaml.c
src/libbuzzy/builders/: autotools.c  build.c  cmake.c  noop.c
src/libbuzzy/distro/: arch.c  arch.c.rl  debian.c  debian.c.rl  env.c  git.c  git.c.rl  homebrew.c  homebrew.c.rl  packager.c  pdb.c  posix.c  rpm.c  rpm.c.rl
src/libbuzzy/packagers/: deb.c  homebrew.c  noop.c  pacman.c  rpm.c
src/libbuzzy/repos/: filesystem.c  git.c  local.c  url.c
src/libcork/: CMakeLists.txt
src/libyaml/: CMakeLists.txt
test-packages/: baz.yaml  jansson.yaml  libbar.yaml  libcork.yaml  libfoo.yaml
test-packages/built/: check.yaml  jansson.yaml
test-packages/devel/: check.yaml
test-packages/native/: jansson.yaml
test-packages/python/: buzzy.yaml
tests/: CMakeLists.txt  config.t  detect-builder.t  doc.t  helpers.h  info.t  links.t  test-action.c  test-arch.c  test-autotools.c  test-cmake.c  test-debian.c  test-env.c  test-git.c  test-homebrew.c  test-os.c  test-repo.c  test-rpm.c  test-run.c  test-versions.c  update.t  vercmp.t
vagrant/: Vagrantfile  build
